@@ -1,3 +1,9 @@
+2013-11-14  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+	    Alan Modra  <amodra@gmail.com>
+
+	* config/rs6000/linux-unwind.h (ppc_fallback_frame_state): Correct
+	location of CR save area for 64-bit little-endian systems.
+
 2013-11-11  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* config.host (arm-wrs-vxworks): Replace arm/t-vxworks with arm/t-elf
